tests/NormalTests/paczka1/fuzzy1/13436596.err
Error in line 7: hIdx8GJzHY A927 33,8
Error in line 14: A896 A896 50,4
Error in line 19: dyFEneK8axe A927 84,6
Error in line 22: dyFEneK8axe S674 74,3
Error in line 37: hIdx8GJzHY Ab27 44,b
